--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1,7 +1,7 @@
 settings:
   links_font_weight: normal
 profile:
-  image_url: /assets/images/teresa_rodriguez.jpg
+  image_url: /assets/images/terers.jpeg
   alt_text: "Profile photo of Teresa Rodriguez"
   name: Teresa Rodriguez Sotelo
   description: History PhD Candidate at the University of New Mexico. Photo by [Ottowagraphics](https://pixabay.com/users/ottawagraphics-3815775/).
