--- a/_data/top-nav.yml
+++ b/_data/top-nav.yml
@@ -1,8 +1,9 @@
+
+- title: "About Me"
+  url: /about-me
 - title: "Research"
   url: /research
-- title: "Teaching"
-  url: /teaching
-- title: "Creative"
-  url: /creative
 - title: "CV"
   url: /cv
+- title: "Teaching"
+  url: /teaching
